main.tf
resource "aws_vpc" "metabase_vpc" {
  cidr_block = "10.0.0.0/16"

  tags       = {
    Name     = "metabase-vpc"
  }
}
